[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["NEUZhangy <alice7neusoft1207@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3.15 "
tokio-stream = "0.1.6"
state = "0.4"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.1"
anyhow = "1.0.40"
rodio = "0.14.0"